feat(#142): implementing a delete attachment route for expenses
