# app/docs/swagger.json
@@ -896,6 +896,40 @@
         }
       }
     },
+    "/v1/expenses/{id}/attachment": {
+      "delete": {
+        "tags": ["Expenses"],
+        "description": "Deletes an expense attachment",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID of the expense"
+          },
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/v1/refunds/{groupId}?simplified=true": {
       "get": {
         "tags": ["Refunds"],
