# app/routes/expenseRoutes.js
@@ -1,5 +1,5 @@
 const express = require('express');
-const { getExpenses, getExpense, createExpense, updateExpense, deleteExpense } = require ('../controllers/expenseController');
+const { getExpenses, getExpense, createExpense, updateExpense, deleteExpense, deleteExpenseAttachment } = require ('../controllers/expenseController');
 const router = express.Router();
 
 const authenticateJWT = require('../middlewares/auth');
@@ -9,5 +9,6 @@ router.get('/:groupId/:expenseId', authenticateJWT, getExpense);
 router.post('/', authenticateJWT, createExpense);
 router.patch('/:id', authenticateJWT, updateExpense);
 router.delete('/:id', authenticateJWT, deleteExpense);
+router.delete('/:id/attachment', authenticateJWT, deleteExpenseAttachment);
 
 module.exports = router;
